app/styles/style.css
@font-face {
  font-family: OpenSans-Light;
  src: url(./fonts/OpenSans-Light.ttf);
}

@font-face {
  font-family: OpenSans-Regular;
  src: url(./fonts/OpenSans-Regular.ttf);
}

/* BASE */
html, body {
  height: 100%;
}

body {
  font-family: "OpenSans-Light", Helvetica, Arial, sans-serif;
  font-size: 14px;
  padding-top: 80px;
}

a {
  color: rgb(0, 183, 255);
}

h1, h2, h3, h4, h5, h6 {
  font-family: "OpenSans-Light", Helvetica, Arial, sans-serif;
  font-weight: normal;
}

h1 {
  margin: 0 auto 30px;
  font-size: 40px;
  text-transform: uppercase;
  text-align: center;
}

h2 {
  margin-bottom: 50px;
  text-align: center;
  font-size: 20px;
}

h5 {
  font-size: 16px;
}

.subtitle {
  margin: 0 auto 20px;
  font-size: 25px;
  font-variant: small-caps;
}

.space-top {
  padding-top: 65px;
}

.space-top-double {
  padding-top: 115px;
}

.space-top-mini {
  padding-top: 20px;
}

.space-bottom {
  padding-bottom: 11px;
}

.center {
  text-align: center;
}

.block-center {
  display: block;
  margin: 0 auto;
}

.clickable {
  cursor: pointer;
}

.no-padding {
  padding: 0;
}

.no-margin {
  margin: 0;
}

.no-underline:hover {
  text-decoration: none !important;
}

.row {
  margin: 0;
}

.container-fill {
  width: 100%;
  height: 100%;
}

.row-fill {
  height: 100%;
}

.full-height {
  height: 100%;
}

.bottom-fixed {
  position: fixed;
  width: 100%;
  bottom: 0;
}

textarea:focus,
input:focus,
select:focus,
button:focus {
  outline: 0;
}

label {
  margin: auto auto 0 5px;
  line-height: 45px;
  font-weight: normal;
}

select {
  width: 100%;
  border: none;
}

spinner {
  position: absolute;
  top: 50%;
  left: 50%;
}

.spinner {
  left: 50% !important;
  top: 17px !important;
  height: 45px;
}

.appinvisible {
  visibility: hidden;
}

.appinvisible * {
  height: 0 !important;
  padding-top: 0 !important;
  padding-bottom: 0 !important;
  margin-top: 0 !important;
  margin-bottom: 0 !important;
}

.clear {
  clear: both;
}


/* BOOTSTRAP */
.modal-footer {
  margin-top: 0;
}

.modal-body {
  max-height: 550px;
  overflow-y: auto;
}

.modal-body p {
  margin: 0;
}

.btn-default {
  background-color: rgb(230, 230, 230);
}

.btn-default:hover,
.btn-default:focus,
.btn-default:active {
  background-color: rgb(220, 220, 220);
}

.modal-content {
  border-radius: 0;
}

input[type="file"] {
  display: inline-block;
}

.progress {
  padding: 0;
  border-radius: 0;
}

.pagination {
  float: right;
}

.pagination li a {
  border-radius: 0 !important;
}

.primary .pagination li:not(.disabled):not(.active) a    { color: rgb(255, 29, 37);    }
.secondary .pagination li:not(.disabled):not(.active) a  { color: rgb(63, 169, 245);   }
.tertiary .pagination li:not(.disabled):not(.active) a   { color: rgb(255, 147, 30);   }
.quaternary .pagination li:not(.disabled):not(.active) a { color: rgb(122, 201, 67);   }
.quinary .pagination li:not(.disabled):not(.active) a    { color: rgb(255, 108, 164);  }

.pagination .active a,
.pagination .active a:hover {
  color: rgb(255, 255, 255);
  border-color: transparent;
}

.primary .pagination .active a    { background-color: rgba(254, 80, 81, 0.7);   }
.secondary .pagination .active a  { background-color: rgba(95, 182, 245, 0.7);  }
.tertiary .pagination .active a   { background-color: rgba(255, 168, 72, 0.7);  }
.quaternary .pagination .active a { background-color: rgba(141, 209, 97, 0.7);  }
.quinary .pagination .active a    { background-color: rgba(255, 149, 189, 0.7); }


/* MODALS */
.modal-mini-title {
  margin-bottom: 15px;
  padding: 0;
  text-align: center;
}

.modal-mini-paragraphs {
  margin-bottom: 15px !important;
  padding: 0 !important;
}

.modal-mini-close {
  height: 45px;
  line-height: 45px;
}

.modal-btn-plus {
  width: 80% !important;
  padding: 0 !important;
  float: none;
}

.modal-mini-btn {
  text-align: center;
  line-height: 48px;
  height: 45px;
}

.modal-input-label {
  line-height: 45px;
}

.quaternary .modal-label {
  font-size: 16px;
  color: rgb(122, 201, 67);
}


/* NAVTOP */
.navtop-container {
  text-transform: uppercase;
  color: rgb(0, 0, 0);
  background-color: rgb(255, 255, 255);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
  border: none;
}

.navbar-brand {
  color: rgb(0, 0, 0) !important;
}

.navtop-icon {
  vertical-align: bottom;
}

.navtop-toggle-button {
  border: none;
  outline: none;
}

.navtop-toggle-button:hover,
.navtop-toggle-button:active {
  background-color: rgb(238, 238, 238) !important;
  border-radius: 0 0;
  border-color: white !important;
}

.navtop-toggle-button:hover .icon-bar {
  color: rgb(255, 255, 255) !important;
}

.navtop-item {
  background-repeat: no-repeat;
  background-position: 0 50px;
  -webkit-transition: all 0.2s ease-out;
     -moz-transition: all 0.2s ease-out;
      -ms-transition: all 0.2s ease-out;
       -o-transition: all 0.2s ease-out;
          transition: all 0.2s ease-out;
}

.navtop-item a {
  color: rgb(0, 0, 0) !important;
}

.navtop-items-list .active {
  background-position: 0 48px;
}

.navbar-inverse .navbar-nav > .active > a,
.navbar-inverse .navbar-nav > .active > a:hover,
.navbar-inverse .navbar-nav > .active > a:focus {
  background-color: inherit;
}

.navtop-items-list .active:nth-child(1) > a { color: rgb(255, 29, 37) !important;   }
.navtop-items-list .active:nth-child(2) > a { color: rgb(63, 169, 245) !important;  }
.navtop-items-list .active:nth-child(3) > a { color: rgb(255, 147, 30) !important;  }
.navtop-items-list .active:nth-child(4) > a { color: rgb(122, 201, 67) !important;  }
.navtop-items-list .active:nth-child(5) > a { color: rgb(255, 108, 164) !important; }

.navtop-item:hover {
  background-position: 0 0;
}

.navbar-inverse .navbar-nav > li > a:hover {
  color: white !important;
}

.navbar-inverse .navbar-toggle .icon-bar {
  background-color: rgb(0, 0, 0);
}

.navbar-inverse .navbar-collapse,
.navbar-inverse .navbar-form {
  border-color: rgb(238, 238, 238);
}
/* ... */

